packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = true            let x  = (false);            x = (_x);            .snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca i64, align 8
  store i64 1, i64* %_x, align 4
  %x = alloca i64, align 8
  store i64 0, i64* %x, align 4
  %"2" = load i64, i64* %_x, align 4
  store i64 %"2", i64* %x, align 4
  ret void
}

