packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = truelet x  = !((_x)).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca i64, align 8
  store i1 true, i64* %_x_, align 1
  %x_ = alloca i64, align 8
  %"2" = load i64, i64* %_x_, align 4
  %"1" = xor i64 %"2", 1
  store i64 %"1", i64* %x_, align 4
  ret void
}

